Fixed spacing issue

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -1,51 +1,23 @@
 @tailwind base;
 @tailwind components;
-body, html, #app {
-  height: 100%;
+@css{
+  body, html, #app {
+    height: calc(100vh - 30px);
+  }
+  h1 {
+    @apply text-5xl;
+  }
+  h2 {
+    @apply text-3xl mb-4;
+  }
+  h3 {
+    @apply text-2xl mb-4 border-b-4;
+  }
+  h4 {
+    @apply text-1xl mb-4;
+  }
 }
 @tailwind utilities;
 
 @import 'utilities';
 @require './code'
-
-.container-warning
-  margin 1rem 0
-  padding .1rem 1.5rem
-  border-radius 0.4rem
-  background-color #f6e05e
-  .title
-    font-weight bold
-
-.custom-block
-  &.right
-    color transparentify($textColor, 0.4)
-    font-size 0.9rem
-    text-align right
-
-.container-tip
-  margin 1rem 0
-  padding .1rem 1.5rem
-  border-radius 0.4rem
-  background-color #f6e05e
-  .title
-    font-weight bold
-
-.custom-block
-  &.right
-    color transparentify($textColor, 0.4)
-    font-size 0.9rem
-    text-align right
-
-.container-note
-  margin 1rem 0
-  padding .1rem 1.5rem
-  border-radius 0.4rem
-  background-color #f6e05e
-  .title
-    font-weight bold
-
-.custom-block
-  &.right
-    color transparentify($textColor, 0.4)
-    font-size 0.9rem
-    text-align right
